se modifico el contacto

--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
     </tr>
     
     <td colspan="7" align="center"><br><img src="img/vivian.jpeg" width="320" height="480"><br><font color="white" size="3" face="Arial"><br>Vivian Lizeth Mazzillo Rojas</font></td>
-    	<td colspan="7"><font color="#03776f" size="3" face="Arial">Datos Personales:</font><font color="white" size="3" face="Arial"><br>Nacida en Villavicencio, Meta<br>Diciembre 16, 1998<br>19 años<br>C.C. 1.110.595.269<br>Estudiante de Comunicación y Entretenimiento Digital<br>Universidad de Medellín<br>Calle 9A #75A- 38 Belén Las Margaritas<br>Medellín, Colombia<br>nino16-ml@hotmail.com<br>3178952582	
+    	<td colspan="7"><font color="#03776f" size="3" face="Arial">Datos Personales:</font><font color="white" size="3" face="Arial"><br>Nacida en Villavicencio, Meta<br>Diciembre 16, 1998<br>23 años<br>C.C. 1.110.595.269<br>Estudiante de Diseño Interactivo<br>Universidad Jorge Tadeo Lozano<br>Bogotá, Colombia<br>vivianmazzillo@gmail.com<br>3178952582	
         </font>
     	
     	</td>
